--- a/angular.json
+++ b/angular.json
@@ -21,29 +21,29 @@
           }
         }
       },
-      "root": "projects/app",
-      "sourceRoot": "projects/app/src",
+      "root": "wallet-frontend",
+      "sourceRoot": "wallet-frontend/src",
       "prefix": "app",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/app",
-            "index": "projects/app/src/index.html",
-            "main": "projects/app/src/main.ts",
-            "polyfills": "projects/app/src/polyfills.ts",
-            "tsConfig": "projects/app/tsconfig.app.json",
+            "index": "wallet-frontend/src/index.html",
+            "main": "wallet-frontend/src/main.ts",
+            "polyfills": "wallet-frontend/src/polyfills.ts",
+            "tsConfig": "wallet-frontend/tsconfig.app.json",
             "aot": false,
             "assets": [
-              "projects/app/src/favicon.ico",
-              "projects/app/src/assets"
+              "wallet-frontend/src/favicon.ico",
+              "wallet-frontend/src/assets"
             ],
             "styles": [
-              "projects/app/src/styles.scss"
+              "wallet-frontend/src/styles.scss"
             ],
             "scripts": [
               {
-                "input": "projects/app/src/assets/example.js",
+                "input": "wallet-frontend/src/assets/example.js",
                 "bundleName": "exampleBundle",
                 "lazy": true
               }
@@ -53,8 +53,8 @@
             "production": {
               "fileReplacements": [
                 {
-                  "replace": "projects/app/src/environments/environment.ts",
-                  "with": "projects/app/src/environments/environment.prod.ts"
+                  "replace": "wallet-frontend/src/environments/environment.ts",
+                  "with": "wallet-frontend/src/environments/environment.prod.ts"
                 }
               ],
               "optimization": true,
@@ -82,14 +82,14 @@
             "en": {
               "aot": true,
               "outputPath": "dist/app-en",
-              "i18nFile": "projects/app/i18n/messages.en.xlf",
+              "i18nFile": "wallet-frontend/i18n/messages.en.xlf",
               "i18nFormat": "xlf2",
               "i18nLocale": "en"
             },
             "ru": {
               "aot": true,
               "outputPath": "dist/app-ru",
-              "i18nFile": "projects/app/i18n/messages.ru.xlf",
+              "i18nFile": "wallet-frontend/i18n/messages.ru.xlf",
               "i18nFormat": "xlf2",
               "i18nLocale": "ru",
               "optimization": true,
@@ -141,16 +141,16 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "main": "projects/app/src/test.ts",
-            "polyfills": "projects/app/src/polyfills.ts",
-            "tsConfig": "projects/app/tsconfig.spec.json",
-            "karmaConfig": "projects/app/karma.conf.js",
+            "main": "wallet-frontend/src/test.ts",
+            "polyfills": "wallet-frontend/src/polyfills.ts",
+            "tsConfig": "wallet-frontend/tsconfig.spec.json",
+            "karmaConfig": "wallet-frontend/karma.conf.js",
             "assets": [
-              "projects/app/src/favicon.ico",
-              "projects/app/src/assets"
+              "wallet-frontend/src/favicon.ico",
+              "wallet-frontend/src/assets"
             ],
             "styles": [
-              "projects/app/src/styles.scss"
+              "wallet-frontend/src/styles.scss"
             ],
             "scripts": []
           }
@@ -159,9 +159,9 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "projects/app/tsconfig.app.json",
-              "projects/app/tsconfig.spec.json",
-              "projects/app/e2e/tsconfig.json"
+              "wallet-frontend/tsconfig.app.json",
+              "wallet-frontend/tsconfig.spec.json",
+              "wallet-frontend/e2e/tsconfig.json"
             ],
             "exclude": [
               "**/node_modules/**"
@@ -171,7 +171,7 @@
         "e2e": {
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
-            "protractorConfig": "projects/app/e2e/protractor.conf.js",
+            "protractorConfig": "wallet-frontend/e2e/protractor.conf.js",
             "devServerTarget": "app:serve"
           },
           "configurations": {
