--- a/package.json
+++ b/package.json
@@ -31,14 +31,17 @@
     "bip39": "^3.0.2",
     "bitcoinjs-lib-cash": "github:krboktv/bitcoinjs-lib#70e2ca6f33d258dce29ae49fcbb107d2aaff53be",
     "buffer": "^5.4.3",
+    "crypto-js": "^3.1.9-1",
     "easyqrcodejs": "^3.3.0",
     "ethereumjs-tx": "^2.1.1",
     "ethereumjs-util": "^6.2.0",
     "hammerjs": "^2.0.8",
+    "jsqr": "^1.2.0",
     "process": "^0.11.10",
     "rxjs": "~6.4.0",
     "stellar-sdk": "^3.3.0",
     "tslib": "^1.10.0",
+    "unibabel": "^2.1.8",
     "waves-transactions": "^3.0.13",
     "web3": "^1.2.4",
     "zone.js": "~0.9.1"
@@ -51,6 +54,7 @@
     "@angular/language-service": "~8.2.14",
     "@ngx-i18nsupport/ngx-i18nsupport": "^1.1.6",
     "@types/bchaddrjs": "^0.4.0",
+    "@types/crypto-js": "^3.1.43",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^8.10.59",
