--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jsqr": "^1.2.0",
     "process": "^0.11.10",
     "rxjs": "~6.4.0",
+    "stacktrace-parser": "^0.1.8",
     "stellar-sdk": "^3.3.0",
     "tslib": "^1.10.0",
     "unibabel": "^2.1.8",
