--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test-krboktv",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "",
   "keywords": [],
   "main": "dist/index.js",
@@ -31,7 +31,8 @@
     "semantic-release": "semantic-release",
     "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
     "precommit": "lint-staged",
-    "travis-deploy-once": "travis-deploy-once"
+    "travis-deploy-once": "travis-deploy-once",
+    "create-index": "cti src"
   },
   "lint-staged": {
     "{src,test}/**/*.ts": [
@@ -79,6 +80,7 @@
     "colors": "^1.3.2",
     "commitizen": "^3.0.0",
     "coveralls": "^3.0.2",
+    "create-ts-index": "^1.12.0",
     "cross-env": "^5.2.0",
     "cz-conventional-changelog": "^2.1.0",
     "husky": "^1.0.1",
