--- a/package.json
+++ b/package.json
@@ -58,8 +58,10 @@
     "@waves/ts-lib-crypto": "^1.4.2",
     "bchaddrjs": "^0.4.5",
     "bignumber.js": "^9.0.0",
+    "bip39": "^3.0.2",
     "bitcoinjs-lib-cash": "github:krboktv/bitcoinjs-lib#70e2ca6f33d258dce29ae49fcbb107d2aaff53be",
     "buffer": "^5.4.3",
+    "crypto": "^1.0.1",
     "ethereumjs-tx": "^2.1.1",
     "ethereumjs-util": "^6.2.0",
     "process": "^0.11.10",
