--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "ethereumjs-util": "^6.2.0",
     "process": "^0.11.10",
     "stellar-sdk": "^3.3.0",
+    "tweetnacl": "^1.0.2",
     "waves-transactions": "^3.0.13",
     "web3": "^1.2.4"
   },
