--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test-krboktv",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "",
   "keywords": [],
   "main": "dist/index.js",
@@ -62,11 +62,13 @@
     "bitcoinjs-lib-cash": "github:krboktv/bitcoinjs-lib#70e2ca6f33d258dce29ae49fcbb107d2aaff53be",
     "buffer": "^5.4.3",
     "crypto": "^1.0.1",
+    "ed2curve": "^0.3.0",
     "ethereumjs-tx": "^2.1.1",
     "ethereumjs-util": "^6.2.0",
     "process": "^0.11.10",
     "stellar-sdk": "^3.3.0",
     "tweetnacl": "^1.0.2",
+    "tweetnacl-ts": "^1.0.3",
     "waves-transactions": "^3.0.13",
     "web3": "^1.2.4"
   },
@@ -74,6 +76,7 @@
     "@commitlint/cli": "^7.1.2",
     "@commitlint/config-conventional": "^7.1.2",
     "@types/bchaddrjs": "^0.4.0",
+    "@types/ed2curve": "^0.2.2",
     "@types/jest": "^23.3.2",
     "@types/lodash.camelcase": "^4.3.6",
     "@types/node": "^10.11.0",
