--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "test-krboktv",
   "version": "0.0.5",
-  "description": "",
+  "description": "HdWallet and sign transaction library for typescript",
   "keywords": [],
   "main": "dist/index.js",
   "typings": "dist/types/index.d.ts",
