--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test-krboktv",
-  "version": "0.1.3",
+  "version": "0.1.6",
   "description": "HdWallet and sign transaction library for typescript",
   "keywords": [],
   "main": "dist/index.js",
@@ -56,6 +56,7 @@
   },
   "dependencies": {
     "@waves/ts-lib-crypto": "^1.4.2",
+    "@waves/waves-transactions": "^3.25.0",
     "bchaddrjs": "^0.4.5",
     "bignumber.js": "^9.0.0",
     "bip39": "^3.0.2",
@@ -69,7 +70,6 @@
     "stellar-sdk": "^3.3.0",
     "tweetnacl": "^1.0.2",
     "tweetnacl-ts": "^1.0.3",
-    "waves-transactions": "^3.0.13",
     "web3": "^1.2.4"
   },
   "devDependencies": {
