--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "bip39": "^3.0.2",
     "bitcoinjs-lib-cash": "github:krboktv/bitcoinjs-lib#70e2ca6f33d258dce29ae49fcbb107d2aaff53be",
     "buffer": "^5.4.3",
+    "bufferutil": "^4.0.1",
     "crypto": "^1.0.1",
     "ed2curve": "^0.3.0",
     "ethereumjs-tx": "^2.1.1",
@@ -81,6 +82,7 @@
     "@types/lodash.camelcase": "^4.3.6",
     "@types/node": "^10.11.0",
     "@types/rollup-plugin-json": "^3.0.2",
+    "@types/rollup-plugin-node-builtins": "^2.1.1",
     "@types/rollup-plugin-node-resolve": "^4.1.0",
     "@types/rollup-plugin-sourcemaps": "^0.4.2",
     "colors": "^1.3.2",
@@ -101,6 +103,7 @@
     "rollup": "^0.67.0",
     "rollup-plugin-commonjs": "^9.1.8",
     "rollup-plugin-json": "^3.1.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^3.4.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-typescript2": "^0.18.0",
