--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "ethereumjs-tx": "^2.1.1",
     "ethereumjs-util": "^6.2.0",
     "process": "^0.11.10",
+    "randombytes": "^2.1.0",
     "stellar-sdk": "^3.3.0",
     "tweetnacl": "^1.0.2",
     "tweetnacl-ts": "^1.0.3",
@@ -85,6 +86,7 @@
     "@types/rollup-plugin-node-builtins": "^2.1.1",
     "@types/rollup-plugin-node-resolve": "^4.1.0",
     "@types/rollup-plugin-sourcemaps": "^0.4.2",
+    "@types/uuid": "^3.4.6",
     "colors": "^1.3.2",
     "commitizen": "^3.0.0",
     "coveralls": "^3.0.2",
