--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
   },
   "scripts": {
     "lint": "tslint --project tsconfig.json -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
-    "prebuild": "rimraf dist",
+    "prebuild": "rimraf dist && rimraf build",
     "build": "tsc --module commonjs && rollup -c rollup.config.ts",
+    "build:browser": "npm run build && npm run browserify && npm run minify",
     "start": "rollup -c rollup.config.ts -w",
     "test": "jest --coverage",
     "test:watch": "jest --coverage --watch",
     "test:prod": "npm run lint && npm run test -- --no-cache",
     "commit": "git-cz",
     "precommit": "lint-staged",
-    "create-index": "cti src"
+    "create-index": "cti src",
+    "browserify": "browserify --standalone TsWalletCore dist/index.js -o build/ts-wallet-core.js",
+    "minify": "minify build/ts-wallet-core.js > build/ts-wallet-core.min.js"
   },
   "lint-staged": {
     "{src,test}/**/*.ts": [
@@ -93,6 +96,7 @@
     "jest-config": "^23.6.0",
     "lint-staged": "^8.0.0",
     "lodash.camelcase": "^4.3.0",
+    "minify": "^5.0.0",
     "prettier": "^1.14.3",
     "prompt": "^1.0.0",
     "replace-in-file": "^3.4.2",
